--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon app"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
@@ -15,6 +16,7 @@
     "jade": "~1.11.0",
     "mongoose": "^8.17.1",
     "morgan": "~1.9.1",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
